<resources>
    <string name="app_name">Trust Automation</string>
    <string name="add_shortcut_input_label_hint">Label</string>
    <string name="add_shortcut_action_add">Add shortcut</string>
    <string name="add_shortcut_title">Add application shortcut</string>
    <string name="add_shortcut_input_app_name">Select a app</string>
    <string name="available_apps_selection_loading_text">Loading available apps</string>
    <string name="add_shortcut_error_duplicated">This app is already added</string>
    <string name="shortcuts_action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_remove_shortcut_title">Remove shortcut</string>
    <string name="dialog_remove_shortcut_message">Are you sure you want to remove this shortcut to %s?</string>
    <string name="add_shortcut_input_label_helper">If leaved empty, Application name will be used</string>
    <string name="action_about">About</string>
    <string name="about_who_we_are_text"><![CDATA[Trust Security & Communications is a privately owned company offering you the latest in security solutions as well as the personal attention you need to see your project through from start to end.]]></string>
    <string name="about_who_we_are_title">Who we Are:</string>
    <string name="about_our_mission_title">Our Mission:</string>
    <string name="about_our_mission_text"><![CDATA[We strive to provide cutting edge technology & security solutions for all our customers, commercial & residential alike. We dedicate ourselves to providing timely installations, service & support. We make every effort to achieve unsurpassed customer satisfaction & loyalty.]]></string>
    <string name="about_our_team_title">Our Team:</string>
    <string name="about_our_team_text"><![CDATA[All of our employees are knowledgeable, responsible, courteous & honest. We maintain strict hiring guidelines including background checks, personal references & more. We require full employee participation at our monthly safety & training meetings, keeping our team up to date with all the latest industry developments. We also conduct periodical employee evaluations, to enable our team to maintain their peak performance standards. In addition, we offer a wide range of employee resources to allow for further growth.]]></string>
    <string name="products_home_automation_text">If you\'d like like more control over what happens in your home while you\'re away or greater comfort while you are in it.</string>
    <string name="products_home_automation_title">Home Automation</string>
    <string name="about_title">About us</string>
    <string name="error_email_blank">Email can\'t be empty</string>
    <string name="error_password_blank">Password can\'t be empty</string>
    <string name="error_email_invalid">Email is not in a valid format. Ex: example@example.org.</string>
    <string name="error_phone_invalid">Phone is not in a valid format. Ex: +17187053921.</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_password_length">Password must have at least 6 characters</string>
    <string name="error_display_name_blank">Display name can\'t be empty</string>
    <string name="error_email_user_collision">Email already in use</string>
    <string name="error_required">Can\'t be blank</string>
    <string name="error_min_length">Must be at least %1$d</string>
    <string name="error_max_length">Must be least than %1$d</string>
    <string name="contact_company_name">Company Name</string>
    <string name="contact_contact_name">Contact Name</string>
    <string name="contact_email">Email</string>
    <string name="contact_your_comment">Your Comment</string>
    <string name="contact_services_required">Services Required</string>
    <string name="contact_services_institutional">Institutional</string>
    <string name="contact_services_commercial">Commercial</string>
    <string name="contact_services_ezine">E-zine</string>
    <string name="contact_services_residential">Residential</string>
    <string name="contact_services_submit">Submit</string>
    <string name="contact_services_call_us">Call Us</string>
    <string name="contact_phone">Telephone</string>
    <string name="contact_success">Message sent, we will be in contact soon.</string>
    <string name="contact_error">There was an error. Please Try again.</string>
</resources>
