<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.addshortcut.AddShortcutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_shortcut_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="14dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/labelInputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp"
        android:hint="@string/add_shortcut_input_label_hint"
        app:helperText="@string/add_shortcut_input_label_helper">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionSelectApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelInputView"
        app:layout_constraintStart_toStartOf="@id/labelInputView"
        app:layout_constraintEnd_toEndOf="@id/labelInputView"
        android:layout_marginTop="8dp"
        android:text="@string/add_shortcut_input_app_name"
        tools:icon="@sample/shortcuts"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Design.Error"
            android:text="@string/add_shortcut_error_duplicated"
            app:layout_constraintTop_toBottomOf="@id/actionSelectApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionAddApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_shortcut_action_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="14dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>