<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.cristiangomez.launcher.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminate="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyNameTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/contact_company_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactNameTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_tiny"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/contact_contact_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_tiny"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/contact_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_tiny"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/contact_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_tiny"
            android:layout_marginEnd="@dimen/space_normal"
            android:hint="@string/contact_your_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textLongMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/serviceRequiredLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/contact_services_required"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentTextInputLayout" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/serviceResidentialCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="@dimen/space_tiny"
            android:text="@string/contact_services_residential"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serviceRequiredLabel" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/serviceCommercialCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/contact_services_commercial"
            app:layout_constraintStart_toEndOf="@id/serviceResidentialCheckBox"
            app:layout_constraintTop_toTopOf="@id/serviceResidentialCheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/serviceInstitutionalCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/contact_services_institutional"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serviceResidentialCheckBox" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/serviceEZineCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/contact_services_ezine"
            app:layout_constraintStart_toEndOf="@id/serviceResidentialCheckBox"
            app:layout_constraintTop_toTopOf="@id/serviceInstitutionalCheckBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/contact_services_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serviceInstitutionalCheckBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/callUsAction"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_services_call_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submitAction" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>